# LLM-Bencher

./: .gitignore  CLAUDE.md  LLM_TESTING_PLATFORM_PLAN.md  LLM_Tester_PLAN.md  README.md  alembic.ini  create_shortcut.ps1  pyproject.toml  run_llm_bencher.ps1
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: README.md
data/: bench_prompts.json  llm_bencher.db  stress_test_prompts.json
llm_bencher/: __init__.py  __main__.py  app.py  batch_runner.py  bootstrap.py  config.py  database.py  models.py  prompt_io.py  runner.py  schemas.py
llm_bencher/providers/: base.py  lm_studio.py  ollama.py  openai_cloud.py  openai_compat.py  registry.py
llm_bencher/static/css/: app.css
llm_bencher/templates/: analytics.html  base.html  batch_detail.html  batch_new.html  compare.html  history.html  home.html  prompts.html  providers.html  run_detail.html  runs.html
llm_bencher/web/: __init__.py  analytics_api.py  api.py  routes.py
tests/: conftest.py  test_analytics.py  test_app.py  test_batch.py  test_comparison.py  test_database.py  test_edge_cases.py  test_export.py  test_history.py  test_integration.py  test_prompt_io.py  test_provider_crud.py  test_providers.py  test_ratings.py  test_runs.py  test_tags.py  test_variables.py
tmp820xdgix/data/: test.db
tmp9c_eoewx/data/: test.db
